[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_queued_pipelines"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "pytest",
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[tool.isort]
multi_line_output = 5
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120