[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[flake8]
exclude = ["venv"]
max-line-length = 120
max-complexity = 10

[project]
name = "simple_queued_pipelines"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "pytest",
]

[pycodestyle]
max_line_length = 120

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[tool.isort]
multi_line_output = 5
include_trailing_comma = true
force_grid_wrap = 0
line_length = 80
